# Minicar_Autonomous

./: CMakeLists.txt  README.md  package.xml
config/: default.yaml
dependencies/: FindWiringPi.cmake  README.md
dependencies/MPU6050/: MPU6050.cpp  MPU6050.h
description/: robot.urdf.xacro  robot_core.xacro
launch/: minicar_launch.py  rsp.launch.py
src/: accelerometer.cpp  btsSensors.cpp  control.cpp  control_old.cpp  motorsManager.cpp  pca9685.cpp
