<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minicar</name>
  <version>0.0.0</version>
  <description>Autonomous Minicar package - Contains all modules</description>
  <maintainer email="simone.graffione@edu.unige.it">Simone Graffione</maintainer>
  <author email="simone.graffione@edu.unige.it">Simone Graffione</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>WiringPi</depend>
  <depend>minicar_interfaces</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Other tools can request additional information be placed here -->
	</export>
</package>
